<?xml version="1.0" encoding="utf-8"?><!--
    This program was written by Mayank khan singh dsouza
    contact at mayank0398@gmail.com
    Intended for the Brain Box Media commercial use
-->
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/timeburnerbold"
            android:textSize="@dimen/event_name_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Event name" />

        <TextView
            android:id="@+id/event_timing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="@font/timeburnerbold"
            android:textSize="@dimen/other_detail_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/event_place"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/event_name"
            tools:text="Event timings" />

        <TextView
            android:id="@+id/event_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="26dp"
            android:fontFamily="@font/timeburnerbold"
            android:textSize="@dimen/other_detail_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_name"
            tools:text="Event date" />

        <TextView
            android:id="@+id/event_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/timeburnerbold"
            android:textSize="@dimen/other_detail_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_date"
            tools:text="Event place" />

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_place"
            tools:context=".EventsDetailsActivity" />

        <TextView
            android:id="@+id/event_detail_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/timeburnerbold"
            android:text="@string/know_more_about_the_event"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/map" />

        <TextView
            android:id="@+id/event_details"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/timeburnerbold"
            android:padding="16dp"
            android:text="@string/large_text"
            android:textSize="15sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_detail_tag" />

        <Button
            android:id="@+id/button_book"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_style_pink"
            android:fontFamily="@font/timeburnerbold"
            android:text="@string/booking"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>